fixed issue with landing screen being too big if main page is left to stay the standard sizewith visibility

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -181,8 +181,7 @@
 
 
 #main-page {
-  visibility: hidden;
-  opacity: 0;
+  display: none;
   z-index: 2;
 }
 .main-page__content {
